ingress/ingress-deploymentv2.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  name: demo-ingress

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  namespace: demo-ingress
  labels:
    app: foo
spec:
  replicas: 3  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo-app
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        command:
          - /agnhost
          - serve-hostname
          - --http=true
          - --port=8080
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: demo-ingress
spec:
  selector:
    app: foo
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  namespace: demo-ingress
  labels:
    app: bar
spec:
  replicas: 3  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar-app
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        command:
          - /agnhost
          - serve-hostname
          - --http=true
          - --port=8080
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: demo-ingress
spec:
  selector:
    app: bar
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: demo-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 8080
